[package]
name = "inventar_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"

[[bin]]
name = "inventar_api"
path = "src/main.rs"

[lib]
name = "inventar_lib"
path = "src/lib.rs"