[package]
name = "inventar_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
rocket_cors = "0.5.2"
serde = "1.0.126"
serde_derive = "1.0.126"
rocket_contrib = "0.4.10"
argon2rs = "0.2.5"
rand = "0.8.4"

[[bin]]
name = "inventar_api"
path = "src/main.rs"

[lib]
name = "inventar_lib"
path = "src/lib.rs"